k8s/base/kyverno/policies/apply-ingress-whitelist-annotations.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: apply-ingress-whitelist-annotations
  annotations:
    policies.kyverno.io/title: Apply Ingress Whitelist Annotations
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      This policy creates annotations on ingresses. When
      the `internal-whitelist.kutara.io/enabled` annotation is not
      set it applies the nginx annotations for use with only
      internal application access.
spec:
  mutateExistingOnPolicyUpdate: true
  generateExistingOnPolicyUpdate: true
  rules:
    - name: whitelist
      match:
        any:
          - resources:
              kinds: ["Ingress"]
              annotations:
                 internal-whitelist.kutara.io/enabled: "true"
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(nginx.ingress.kubernetes.io/whitelist-source-range): "10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,2001:559:87dd::/48"
